fix: weird word break in chats

--- a/frontend/src/components/Chat/index.module.css
+++ b/frontend/src/components/Chat/index.module.css
@@ -86,6 +86,7 @@
   font-weight: 300;
   background-color: #115e59;
   border-radius: 1.2rem 0 1.2rem 0;
+  word-break: break-all;
 }
 
 .own_chat > .chat_message {
